force-app/main/default/objects/npsp__Batch__c/fields/npsp__Description__c.field-meta.xml
<CustomField>
    <fullName>npsp__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>