force-app/main/default/objects/npsp__Batch__c/fields/npsp__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>npsp__Object_Name__c</fullName>
    <description>API Name of the object of which this is a batch.</description>
    <inlineHelpText>API Name of the object of which this is a batch.</inlineHelpText>
    <label>Object Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>