force-app/main/default/objects/npsp__Batch__c/listViews/npsp__Open_Batches.listView-meta.xml
<ListView>
    <fullName>npsp__Open_Batches</fullName>
    <columns>NAME</columns>
    <columns>npsp__Batch_Status__c</columns>
    <columns>npsp__Object_Name__c</columns>
    <columns>npsp__Number_of_Items__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>npsp__Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npsp__Batch_Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>Open Batches</label>
</ListView>